<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".85"
            android:background="@color/black"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/team_a_name"
                    style="@style/CelticsGreenText"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/team_a_hint"
                    android:autofillHints="@string/team_a_hint"
                    android:inputType="textNoSuggestions|textMultiLine"
                    android:width="145dp"
                    android:maxLength="25"
                    android:paddingTop="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/team_a_label"
                    android:textColorHint="@color/celticsGreen"
                    android:textSize="20sp"
                    android:background="@drawable/edit_text_bottom_border"
                    android:ellipsize="none"
                    android:maxLines="2"
                    android:scrollHorizontally="false"/>

                <TextView
                    android:id="@+id/score_a_label"
                    style="@style/CelticsWhiText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    tools:text="0"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/three_points_a_btn"
                    style="@style/CelticsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three_points_label" />

                <Button
                    android:id="@+id/two_points_a_btn"
                    style="@style/CelticsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_points_label" />

                <Button
                    android:id="@+id/free_throw_a_btn"
                    style="@style/CelticsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free_throw_label" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/team_b_name"
                    style="@style/LakersPurpleText"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/team_b_hint"
                    android:hint="@string/team_b_hint"
                    android:inputType="textNoSuggestions|textMultiLine"
                    android:width="145dp"
                    android:maxLength="25"
                    android:ellipsize="none"
                    android:maxLines="2"
                    android:scrollHorizontally="false"
                    android:paddingTop="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/team_b_label"
                    android:textColorHint="@color/lakersPurple"
                    android:textSize="20sp"
                    android:background="@drawable/edit_text_bottom_border"/>

                <TextView
                    android:id="@+id/score_b_label"
                    style="@style/LakersGoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    tools:text="0"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/three_points_b_btn"
                    style="@style/LakersButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three_points_label" />

                <Button
                    android:id="@+id/two_points_b_btn"
                    style="@style/LakersButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_points_label" />

                <Button
                    android:id="@+id/free_throw_b_btn"
                    style="@style/LakersButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free_throw_label" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reset_btn"
                style="@style/ToolsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/reset_label" />

            <Button
                android:id="@+id/save_btn"
                style="@style/ToolsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/save_label" />

            <Button
                android:id="@+id/display_btn"
                style="@style/ToolsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/display_label" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>